--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,9 +38,20 @@
 }
 
 .top-right {
-  position: absolute;
+  /* position: absolute;
   top: 10px;
-  right: 10px;
+  right: 10px; */
+}
+
+.top-center {
+  flex: 1; /* Takes up remaining space */
+  text-align: center; /* Centers content horizontally */
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .App {
