--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,64 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.top-right {
-  /* position: absolute;
-  top: 10px;
-  right: 10px; */
-}
-
-.top-center {
-  flex: 1; /* Takes up remaining space */
-  text-align: center; /* Centers content horizontally */
-}
-
 .top {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.App {
-  text-align: center;
-}
-
 .grid {
   position: absolute;
-  top: 100px;
+  top: 130px;
   left: 100px;
+}
+
+body {
+  background-color: #001f3f;
 }
